REGRESSION (iOS 16): LocalStorage writes fail after ~2.5MB https://bugs.webkit.org/show_bug.cgi?id=245479 <rdar://100252023>

Reviewed by Chris Dumez.

We set the maximum size of LocalStorage database to be 5MB, because quota is 5MB. But SQLite has overhead, which means
the file size can reach 5MB when the stored content is much smaller than that. To avoid this issue, now we let
SQLiteStorageArea keep track of the actual content size and use that size to do quota computation, instead of setting
hard limit on database file.

* Source/WebKit/NetworkProcess/storage/SQLiteStorageArea.cpp:
(WebKit::SQLiteStorageArea::isEmpty):
(WebKit::SQLiteStorageArea::prepareDatabase):
(WebKit::SQLiteStorageArea::startTransactionIfNecessary):
(WebKit::SQLiteStorageArea::getItem):
(WebKit::SQLiteStorageArea::getAllItemsFromDatabase):
(WebKit::SQLiteStorageArea::initializeCache):
(WebKit::SQLiteStorageArea::allItems):
(WebKit::SQLiteStorageArea::setItem):
(WebKit::SQLiteStorageArea::removeItem):
(WebKit::SQLiteStorageArea::clear):
* Source/WebKit/NetworkProcess/storage/SQLiteStorageArea.h:

Canonical link: https://commits.webkit.org/255044@main